apps/base/task-control-plane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-control-plane
  labels:
    app.kubernetes.io/part-of: task-control-plane
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
